crates/reinhardt-pages/tests/ui/form/fail/week_input_rejects_ip_address_field.rs
use reinhardt_pages::form;

fn main() {
	let _form = form! {
		name: InvalidWeekIpAddressForm,
		action: "/invalid",
		fields: {
			sprint_week: IpAddressField {
				widget: WeekInput,
			}
		}
	};
}
